--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,10 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>Heroes!!</h1>
-  <ul class="heroes">
-    <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-      <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </li>
-  </ul>
-  <hero-detail [hero]="selectedHero"></hero-detail>
+  <a routerLink="/heroes">Heroes</a>
+  <router-outlet></router-outlet>
 </div>
