--- a/web-app/src/app/hero-detail.component.html
+++ b/web-app/src/app/hero-detail.component.html
@@ -6,6 +6,7 @@
     <div>
       <label>name: </label>
       <input [(ngModel)]="hero.name" placeholder="name"/>
+      <button (click)="goBack()">Back</button>
     </div>
   </div>
 </div>
