trabajo en mostrar lista de paises y seleccionar alguno

--- a/client/src/app/styles/intro.component.css
+++ b/client/src/app/styles/intro.component.css
@@ -3,8 +3,6 @@
   color: white;
 }
 
-.
-
 .entityList li {
   cursor: pointer;
   position: relative;
@@ -13,6 +11,7 @@
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
+  width: 20em;
   border-radius: 4px;
 }
 .entityList li.selected:hover {
